# euroe-stablecoin-concordium

./: .gitignore  Cargo.toml  LICENSE  README.md
interaction/: auth.json  block.json  burn.json  mint2.json  pause.json  transfer.json  unblock.json  upgrade.json  upgrade_with_state.json
src/: lib.rs
tests/: test.rs  upgrade_test.rs
